@@ -1,9 +1,11 @@
 package com.example.Repository;
 
 import com.example.Model.Submission;
+import com.example.Model.SubmissionStatus;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
@@ -22,8 +24,11 @@ public class InMemorySubmissionRepository implements SubmissionRepository {
     }
 
     @Override
-    public Submission findById(String id) {
-        return submissions.get(id);
+    public Optional<Submission> findById(String id) {
+        if (id == null) {
+            throw new IllegalArgumentException("Id cannot be null");
+        }
+        return Optional.ofNullable(submissions.get(id));
     }
 
     @Override
@@ -33,7 +38,12 @@ public class InMemorySubmissionRepository implements SubmissionRepository {
 
     @Override
     public List<Submission> findByStudentId(String studentId) {
-        return submissions.values().stream().filter(s -> s.getStudent().getUserId().equals(studentId)).collect(Collectors.toList());
+        return submissions.values().stream()
+                .filter(submission -> {
+                    String submissionStudentId = submission.getStudent().getUserId();
+                    return submissionStudentId.equals(studentId);
+                })
+                .toList();
     }
 
     @Override
@@ -42,17 +52,34 @@ public class InMemorySubmissionRepository implements SubmissionRepository {
     }
 
     @Override
-    public Submission findByAssignmentIdAndStudentId(String assignmentId, String studentId) {
+    public Optional<Submission> findByAssignmentIdAndStudentId(String assignmentId, String studentId) {
+        if (assignmentId == null) {
+            throw new IllegalArgumentException("Assignment ID cannot be null");
+        }
+        if (studentId == null) {
+            throw new IllegalArgumentException("Student ID cannot be null");
+        }
+
         return submissions.values().stream()
-                .filter(s -> s.getAssignment().getAssignmentId().equals(assignmentId)
-                        && s.getStudent().getUserId().equals(studentId))
-                .findFirst()
-                .orElse(null); // or throw an exception if preferred
+                .filter(s -> {
+                    return s.getAssignment() != null
+                            && assignmentId.equals(s.getAssignment().getAssignmentId())
+                            && s.getStudent() != null
+                            && studentId.equals(s.getStudent().getUserId());
+                })
+                .findFirst();
     }
+
 
 
     @Override
-    public List<Submission> findByStatus(String status) {
-        return submissions.values().stream().filter(s -> s.getStatus().equalsIgnoreCase(status)).collect(Collectors.toList());
+    public List<Submission> findByStatus(SubmissionStatus status) {
+        if (status == null) {
+            throw new IllegalArgumentException("Status cannot be null");
+        }
+        return submissions.values().stream()
+                .filter(s -> s.getStatus() == status)
+                .collect(Collectors.toList());
     }
+
 }
